# sds

./: .gitignore  Cargo.toml  Makefile  README.md
.dev/: ideas.md
.dev/ideas/: 251116.md
crates/sds-core/: Cargo.toml
src/: main.rs
